force-app/main/default/objects/Custom_Data__c/Custom_Data__c.object-meta.xml
<CustomObject>
    <label>Custom Data</label>
    <nameField>
        <label>Custom Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>