force-app/main/default/objects/Custom_Data__c/fields/Parent_Table__c.field-meta.xml
<CustomField>
    <fullName>Parent_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Table</label>
    <referenceTo>Custom_Data__c</referenceTo>
    <relationshipLabel>Custom Data (Parent Table)</relationshipLabel>
    <relationshipName>Custom_Data</relationshipName>
    <type>Lookup</type>
</CustomField>