force-app/main/default/objects/Custom_Data__c/fields/Parent_Table_or_Column__c.field-meta.xml
<CustomField>
    <fullName>Parent_Table_or_Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Table to which the column belongs or column to which this record belongs. Blank if a Table name.</inlineHelpText>
    <label>Parent Column</label>
    <referenceTo>Custom_Data__c</referenceTo>
    <relationshipLabel>Custom Data</relationshipLabel>
    <relationshipName>Related_Data</relationshipName>
    <type>Lookup</type>
</CustomField>