force-app/main/default/objects/Custom_Data__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <description>Row number to unite columns for a particular row.</description>
    <label>Row Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>