force-app/main/default/objects/Custom_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Is this a table name, column name, or record value?</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Column</fullName>
            </value>
            <value>
                <fullName>Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>